# PromptOps

./: .geminignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  CATALOG.ipynb  CATALOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  Makefile.toml  PROMPT_FIX_LOG.md  README.md  SECURITY.md  TEMPLATES.md  TO-DO.md  gemini-extension.json  promptbook  promptops  prompts.json  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  category_proposal.md  prompt_request.md
.github/workflows/: ci.yml  deploy-pages.yml  release-tui.yml  release.yml  validate-prompts.yml
commands/: README.md
commands/prompts/: accessibility-audit.toml  bash-script-generator.toml  ci-cd-pipeline.toml  cli-command-explainer.toml  debug-error.toml  (+51 more)
docs/: CATALOG.md  FULL_CATALOG.md  catalog.json
promptbook-cli/: Cargo.toml
promptbook-cli/src/: main.rs
promptbook-cli/src/commands/: dev.rs  mod.rs  user.rs
promptbook-cli/src/wizards/: mod.rs
promptbook-core/: Cargo.toml
promptbook-core/src/: config.rs  engine.rs  lib.rs  models.rs  providers.rs  search.rs  session.rs  utils.rs
promptbook-mcp/: Cargo.toml
promptbook-mcp/src/: main.rs
promptbook-mcp/tests/: integration.rs
promptbook-tui/: Cargo.toml  README.md
promptbook-tui/src/: clipboard.rs  events.rs  hydrate.rs  loader.rs  main.rs  model.rs  ui.rs  utils.rs
promptbook-tui/src/events/: actions.rs  inputs.rs  mod.rs  navigation.rs  tests.rs
promptbook-tui/src/model/: mod.rs  prompt.rs  state.rs
promptbook-tui/src/ui/: layout.rs  mod.rs
promptbook-tui/src/ui/components/: categories.rs  details.rs  footer.rs  header.rs  mod.rs  modals.rs  prompts.rs
promptops-tui/: Cargo.toml  README.md
scripts/: README.md  evaluate_prompts.py  generate_catalog.py  install.sh  prep-web.sh  promptops_core.py  promptops_tui.py  security-scan.py  sync_all_docs.py  sync_all_versions.py  test_promptbook.py  test_promptops.py  test_validation.py  validate_prompts.py
templates/: template.toml
tests/: README.md  test_features_extended.py
web/: package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+610 files in other folders)
