[package]
name = "promptbook-mcp"
version = "0.1.0"
edition = "2021"
[dependencies]
promptbook-core = { path = "../promptbook-core" }
rmcp = { version = "1.2.0", features = ["server"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
