[package]
name = "promptbook-tui"
version = "0.0.3"
edition = "2021"

[dependencies]
ratatui = "0.26.1"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.10"
arboard = "3.3"
walkdir = "2.4"
glob = "0.3"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.10"
