[package]
name = "promptbook-tui"
version = "0.5.8"
edition = "2021"

[dependencies]
promptbook-core = { path = "../promptbook-core" }
ratatui = "0.26.1"
crossterm = "0.27.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
arboard = "3.3"
chrono = "0.4"
glob = "0.3"
regex = "1.10"
once_cell = "1.21.4"

[dev-dependencies]
tempfile = "3.10"
